add pagination and querying functionality for polls and user polls
